tests/unit/fake_data_root/sos_commands/networking/ip_netns_exec_fip-7553f34c-b718-4a4b-8bbd-2d7a1cd5cf62_ip6tables-save
# Generated by ip6tables-save v1.8.4 on Tue Aug  3 10:32:11 2021
*raw
:PREROUTING ACCEPT [125:27443]
:OUTPUT ACCEPT [14:1296]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A OUTPUT -j neutron-l3-agent-OUTPUT
COMMIT
# Completed on Tue Aug  3 10:32:11 2021
# Generated by ip6tables-save v1.8.4 on Tue Aug  3 10:32:11 2021
*mangle
:PREROUTING ACCEPT [125:27443]
:INPUT ACCEPT [18:1088]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [14:1296]
:POSTROUTING ACCEPT [14:1296]
:neutron-l3-agent-FORWARD - [0:0]
:neutron-l3-agent-INPUT - [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-POSTROUTING - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A INPUT -j neutron-l3-agent-INPUT
-A FORWARD -j neutron-l3-agent-FORWARD
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A POSTROUTING -j neutron-l3-agent-POSTROUTING
COMMIT
# Completed on Tue Aug  3 10:32:11 2021
# Generated by ip6tables-save v1.8.4 on Tue Aug  3 10:32:11 2021
*filter
:INPUT ACCEPT [18:1088]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [14:1296]
:neutron-filter-top - [0:0]
:neutron-l3-agent-FORWARD - [0:0]
:neutron-l3-agent-INPUT - [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-local - [0:0]
-A INPUT -j neutron-l3-agent-INPUT
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-l3-agent-FORWARD
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A neutron-filter-top -j neutron-l3-agent-local
COMMIT
# Completed on Tue Aug  3 10:32:11 2021
